k8s/costdoq/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compress
  namespace: costdoq
spec:
  compress:
    excludedContentTypes: []
