k8s/costdoq/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: costdoq
  labels:
    app: costdoq
